--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "ganache-cli": "^6.0.3",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "sol-merger": "^0.1.0",
     "web3": "^1.0.0-beta.27",
     "zeppelin-solidity": "^1.2.0"
