--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ganache-cli": "^6.0.3",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
+    "ripemd160": "^2.0.1",
     "sol-merger": "^0.1.0",
     "web3": "^1.0.0-beta.27",
     "zeppelin-solidity": "^1.2.0"
